--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TEAM DCODERZ CHECKER">
-    <title>TEAM DCODERZ </title>
+    <title>TEAM DARKS </title>
     <link rel="stylesheet" href="lol.css">
     <style type="text/css">
         body {
@@ -56,7 +56,7 @@
                         <h3 class="panel-title text-center"><b><strong>
                                     <font color="cyan">
                                         <font size="20px">
-                                            <marquee>TEAM DCODERZ </marquee>
+                                            <marquee>TEAM DARKS </marquee>
                                         </font>
                                     </font>
                                 </strong></b></h3>
