--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TEAM DCODERZ CHECKER">
-    <title>TEAM DCODERZ </title>
+    <title>TEAM DARKS </title>
     <link rel="stylesheet" href="lol.css">
     <style type="text/css">
         body {
@@ -56,7 +56,7 @@
                         <h3 class="panel-title text-center"><b><strong>
                                     <font color="cyan">
                                         <font size="20px">
-                                            <marquee>TEAM DCODERZ </marquee>
+                                            <marquee>TEAM DARKS </marquee>
                                         </font>
                                     </font>
                                 </strong></b></h3>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="panel-body warning"> </div>
                 </div> <!-- Footer -->
-                <div class="panel-footer text-center" style="color:black;text-shadow:0 1px 3px rgba(76,63,63,0.98);font-size:17px;"> <a href="" target="_blank" style="text-decoration:none;color:black;">TEAM DCODERZ </a></div>
+                <div class="panel-footer text-center" style="color:black;text-shadow:0 1px 3px rgba(76,63,63,0.98);font-size:17px;"> <a href="" target="_blank" style="text-decoration:none;color:black;">TEAM DARKS </a></div>
             </div>
         </div>
     </div>
